neue Bibelstelle Sprüche 26,4-5, etwas umsortiert und auskommentierte Stellen wieder reaktiviert

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -553,15 +553,11 @@
 						<div class="text">Wenn ihr also vor dem Altar im Tempel steht, um zu opfern, und es fällt euch mit einem Mal ein, dass jemand etwas gegen euch hat, dann lasst euer Opfer vor dem Altar liegen, geht zu dem Betreffenden und versöhnt euch mit ihm. Erst dann kommt zurück und bringt Gott euer Opfer dar.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Matth%C3%A4us5%2C23-24" target="_blank">Matthäus 5,23-24 (NLB)</a></div>
 					</div>
-					<!--
-					<div class="moreinfo">
-						<div class="text">(...) Richtet gerecht und geht liebevoll und barmherzig miteinander um! Unterdrückt die Waisen und Witwen nicht, auch nicht die Ausländer oder die Armen! Und schmiedet keine bösen Pläne gegeneinander!'</div>
-						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Sacharja7%2C9-10" target="_blank">Sacharja 7,9-10 (NeÜ)</a></div>
-					</div>
 					<div class="moreinfo">
 						<div class="text">Ein guter Mensch, der sich von einem Gottlosen beeinflussen lässt, ist so unbrauchbar wie eine trübe Quelle oder ein verschmutzter Brunnen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Spr%C3%BCche25%2C26" target="_blank">Sprüche 25:26 (HFA)</a></div>
 					</div>
+					<!--
 					<div class="moreinfo">
 						<div class="text"></div>
 						<div class="footer"><a href="" target="_blank"></a></div>
@@ -656,6 +652,10 @@
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Epheser4%2C29" target="_blank">Epheser 4:29 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
+						<div class="text">(...) Richtet gerecht und geht liebevoll und barmherzig miteinander um! Unterdrückt die Waisen und Witwen nicht, auch nicht die Ausländer oder die Armen! Und schmiedet keine bösen Pläne gegeneinander!'</div>
+						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Sacharja7%2C9-10" target="_blank">Sacharja 7,9-10 (NeÜ)</a></div>
+					</div>
+					<div class="moreinfo">
 						<div class="text">(...) Liebt eure Feinde. Tut denen Gutes, die euch hassen. Betet für das Glück derer, die euch verfluchen. Betet für die, die euch verletzen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Lukas6%2C27-28" target="_blank">Lukas 6:27-28 (NLB)</a></div>
 					</div>
@@ -670,6 +670,10 @@
 					<div class="moreinfo">
 						<div class="text">Werdet barmherzig, so wie euer Vater barmherzig ist! Verurteilt nicht andere, dann wird Gott auch euch nicht verurteilen. Sitzt über niemand zu Gericht, dann wird Gott auch über euch nicht zu Gericht sitzen. Verzeiht, dann wird Gott euch verzeihen. Schenkt, dann wird Gott euch schenken; ja, er wird euch so überreich beschenken, dass ihr gar nicht alles fassen könnt. Darum gebraucht anderen gegenüber ein reichliches Maß; denn Gott wird bei euch dasselbe Maß verwenden.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Lukas6%2C36-38" target="_blank">Lukas 6:36-38 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Gib dem Dummen keine Antwort, die sich auf die Ebene seiner Dummheit begibt, damit die Leute dich nicht selbst für dumm halten! Gib dem Dummen eine Antwort, wie seine Dummheit sie verdient, damit er sich nicht selbst für klug hält!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Spr%C3%BCche26%2C4-5" target="_blank">Sprüche 26,4-5 (GNB)</a></div>
 					</div>
 					<!--
 					<div class="moreinfo">
