Prediger 9,11 --> Prediger 11,9, weiteres Thema "Gott ändert sich nicht" mit 4 Bibelstellen

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -535,7 +535,7 @@
 				<div class="moreinfos">
 					<div class="moreinfo">
 						<div class="text">Du junger Mensch, genieße deine Jugend und freu dich in der Blüte deines Lebens! Tu, was dein Herz dir sagt und was deinen Augen gefällt! Aber sei dir bewusst, dass Gott dich für alles zur Rechenschaft ziehen wird!</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Prediger11%2C9" target="_blank">Prediger 9,11 (HFA)</a></div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Prediger11%2C9" target="_blank">Prediger 11,9 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
 						<div class="text">Darum soll jeder sein Leben genau prüfen. Dann wird er sich über seine guten Taten freuen können, aber keinen Grund zur Überheblichkeit haben. Denn jeder ist für sein eigenes Tun vor Gott verantwortlich. Das ist schon schwer genug!</div>
@@ -989,6 +989,39 @@
 					<div class="moreinfo">
 						<div class="text">So spricht der HERR, der heilige Gott Israels: »Kehrt doch um zu mir und werdet ruhig, dann werdet ihr gerettet! Vertraut mir und habt Geduld, dann seid ihr stark! (...)</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja30%2C15" target="_blank">Jesaja 30,15 (HFA)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
+				</div>
+			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Gott ändert sich nicht</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">(...) Bei ihm gibt es keine Veränderung, auch nicht den Hauch eines Wechsels.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/LUT.ELB.HFA.GNB.NLB.Ne%C3%9C/Jakobus1%2C17" target="_blank">Jakobus 1,17 (NeÜ)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">(...) Du aber bleibst der, der du bist, und deine Jahre enden nicht.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Hebr%C3%A4er1%2C12" target="_blank">Hebräer 1,12 (NeÜ)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Jesus Christus ist ja immer derselbe – gestern, heute und in alle Ewigkeit.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Hebr%C3%A4er13%2C8" target="_blank">Hebräer 13,8 (NeÜ)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">(...) nämlich das lebendige und ewig bestehende Wort Gottes.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/1.Petrus1%2C23" target="_blank">1.Petrus 1,23 (NLB)</a></div>
 					</div>
 					<!--
 					<div class="moreinfo">
