weitere Bibelstelle zum Thema Rettung: Epheser 2,8-9

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -983,6 +983,10 @@
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Apostelgeschichte4%2C12" target="_blank">Apostelgeschichte 4:12 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
+						<div class="text">Eure Rettung ist wirklich reine Gnade, und ihr empfangt sie allein durch den Glauben. Ihr selbst habt nichts dazu getan, sie ist Gottes Geschenk. Ihr habt sie nicht durch irgendein Tun verdient; denn niemand soll sich mit irgendetwas rühmen können.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Epheser2%2C8-9" target="_blank">Epheser 2,8-9 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
 						<div class="text">(...) Ihr glaubt an ihn, obwohl ihr ihn auch jetzt nicht sehen könnt, und eure Freude ist herrlich, ja, grenzenlos, denn ihr wisst, dass ihr das Ziel eures Glaubens erreichen werdet: die Rettung für alle Ewigkeit.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Petrus1%2C8-9" target="_blank">1.Petrus 1,8-9 (HFA)</a></div>
 					</div>
