weitere Bibelstelle zum Thema Rettung: Hebräer 7,25

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -987,6 +987,10 @@
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Epheser2%2C8-9" target="_blank">Epheser 2,8-9 (GNB)</a></div>
 					</div>
 					<div class="moreinfo">
+						<div class="text">Und weil Jesus Christus ewig lebt und für uns bei Gott eintritt, wird er auch alle endgültig retten, die durch ihn zu Gott kommen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Hebr%C3%A4er7%2C25" target="_blank">Hebräer 7,25 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
 						<div class="text">(...) Ihr glaubt an ihn, obwohl ihr ihn auch jetzt nicht sehen könnt, und eure Freude ist herrlich, ja, grenzenlos, denn ihr wisst, dass ihr das Ziel eures Glaubens erreichen werdet: die Rettung für alle Ewigkeit.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Petrus1%2C8-9" target="_blank">1.Petrus 1,8-9 (HFA)</a></div>
 					</div>
