Neue Bibelstelle bei "Demut": 1.Korinther 4,7 (GNB)

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -385,6 +385,10 @@
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Korinther4%2C5" target="_blank">1.Korinther 4,5 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
+						<div class="text">Wer gibt dir denn das Recht, dir etwas einzubilden? Kommt nicht alles, was du hast, von Gott? Wie kannst du dann damit angeben, als hättest du es von dir selbst?</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/1.Korinther4%2C7" target="_blank">1.Korinther 4,7 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
 						<div class="text">Wenn sich einer also etwas auf sein Wissen einbildet, so weiß er gerade nicht, worauf es ankommt. Wer aber Gott liebt, dem wendet sich Gott in Liebe zu.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Korinther8%2C2-3" target="_blank">1.Korinther 8,2-3 (HFA)</a></div>
 					</div>
