--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -561,6 +561,14 @@
 						<div class="text">Ein guter Mensch, der sich von einem Gottlosen beeinflussen lässt, ist so unbrauchbar wie eine trübe Quelle oder ein verschmutzter Brunnen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Spr%C3%BCche25%2C26" target="_blank">Sprüche 25:26 (HFA)</a></div>
 					</div>
+					<div class="moreinfo">
+						<div class="text">Denn so wie ihr jetzt andere richtet, werdet auch ihr gerichtet werden. Und mit dem Maßstab, den ihr an andere anlegt, werdet ihr selbst gemessen werden.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Matth%C3%A4us7%2C2" target="_blank">Matthäus 7,2 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Wer selbst kein Erbarmen gehabt hat, über den wird auch Gott erbarmungslos Gericht halten. Wenn aber jemand barmherzig war, dann gilt:[5] Das Erbarmen triumphiert über das Gericht.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Jakobus2%2C13" target="_blank">Jakobus 2,13 (GNB)</a></div>
+					</div>
 					<!--
 					<div class="moreinfo">
 						<div class="text"></div>
