Neues Thema "Sicherheit" mit 3 Bibelstellen

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -1024,6 +1024,35 @@
 			</div>
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Sicherheit</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Er sagte zu mir: »Du und alle, die auf deiner Seite stehen, lasst euch nicht beirren, wenn dieses Volk von Verschwörung redet. Habt keine Angst vor dem, was sie fürchten!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja8%2C12" target="_blank">Jesaja 8,12 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"> Ich habe euch die Vollmacht gegeben, auf Schlangen und Skorpione zu treten und die Gewalt des Feindes zu brechen. Nichts wird euch schaden.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Lukas10%2C19" target="_blank">Lukas 10,19 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Gefährliche Schlangen und tödliches Gift werden ihnen nicht schaden (...)</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Markus16%2C18" target="_blank">Markus 16,18 (HFA)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
+				</div>
+			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
 					<div class="label">Gott ändert sich nicht</div>
 				</div>
 				<div class="moreinfos">
