2 neue Bibelstellen bei "Gottesdienst"

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -443,11 +443,15 @@
 						<div class="text">Der Herr hat gesagt: »Dieses Volk da behauptet, mich zu ehren. Aber sie ehren mich nur mit Worten, mit dem Herzen sind sie weit weg von mir. Ihr ganzer Gottesdienst ist sinnlos, denn er besteht nur in der Befolgung von Vorschriften, die Menschen sich ausgedacht haben.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Jesaja29%2C13" target="_blank">Jesaja 29,13 (GNB)</a></div>
 					</div>
-					<!--
 					<div class="moreinfo">
-						<div class="text">Der HERR sagt: »Ich hasse eure Feste und kann eure Feiern nicht ausstehen. Eure Brandopfer und Speiseopfer sind mir zuwider; das gemästete Vieh, das ihr für das Opfermahl schlachtet, kann ich nicht mehr sehen. Hört auf mit dem Geplärr eurer Lieder! Euer Harfengeklimper ist mir lästig! Sorgt lieber dafür, dass jeder zu seinem Recht kommt! Recht und Gerechtigkeit sollen das Land erfüllen wie ein Strom, der nie austrocknet.</div>
+						<div class="text">Der HERR sagt: »Ich hasse eure Feste und kann eure Feiern nicht ausstehen. (...) Hört auf mit dem Geplärr eurer Lieder! Euer Harfengeklimper ist mir lästig! Sorgt lieber dafür, dass jeder zu seinem Recht kommt! Recht und Gerechtigkeit sollen das Land erfüllen wie ein Strom, der nie austrocknet.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Amos5%2C21-24" target="_blank">Amos 5,21-24 (GNB)</a></div>
 					</div>
+					<div class="moreinfo">
+						<div class="text">Ein reiner und unbefleckter Gottesdienst vor Gott und dem Vater ist dieser: Waisen und Witwen in ihrer Bedrängnis zu besuchen, sich selbst von der Welt unbefleckt zu erhalten.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/ELB/Jakobus1%2C27" target="_blank">Jakobus 1,27 (ELB)</a></div>
+					</div>
+					<!--
 					<div class="moreinfo">
 						<div class="text">Ich sage dir: Du bist Petrus. Auf diesen Felsen werde ich meine Gemeinde bauen, und selbst die Macht des Todes wird sie nicht besiegen können.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Matth%C3%A4us16%2C18" target="_blank">Matthäus 16,18 (HFA)</a></div>
@@ -455,6 +459,14 @@
 					<div class="moreinfo">
 						<div class="text">Ihr fastet zwar, aber gleichzeitig zankt und streitet ihr und schlagt mit roher Faust zu. Wenn das ein Fasten sein soll, dann höre ich eure Gebete nicht! Denkt ihr, mir einen Gefallen zu tun, wenn ihr bloß auf Essen und Trinken verzichtet, den Kopf hängen lasst und euch in Trauergewändern in die Asche setzt? Nennt ihr so etwas ›Fasten‹? Ist das ein Tag, an dem ich, der HERR, Freude habe? Nein – ein Fasten, das mir gefällt, sieht anders aus: Löst die Fesseln der Menschen, die man zu Unrecht gefangen hält, befreit sie vom drückenden Joch der Sklaverei und gebt ihnen ihre Freiheit wieder! Schafft jede Art von Unterdrückung ab! Teilt euer Brot mit den Hungrigen, nehmt Obdachlose bei euch auf, und wenn ihr einem begegnet, der in Lumpen herumläuft, gebt ihm Kleider! Helft, wo ihr könnt, und verschließt eure Augen nicht vor den Nöten eurer Mitmenschen!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja58%2C4-7" target="_blank">Jesaja 58,3-7 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
 					</div>
 					-->
 				</div>
