+ Plancksches Strajlungsgesetz , HTML repariert

--- a/web/gunther/Formeln.html
+++ b/web/gunther/Formeln.html
@@ -28,9 +28,10 @@
 						<div class="math">(1) `lambda_max(T) = 2897,8 mu m * 1/T`</div>
 					</div>
 					<div class="section">
-						<div class="text">`lambda_max(T)`: Wellenlänge, bei der die Intensität maximal ist (in μm)</a>
-						<div class="text">`T`: absolute Temperatur des Schwarzen Körpers (in K)</a>
-						<div class="text">Siehe <a href="https://de.wikipedia.org/wiki/Wiensches_Verschiebungsgesetz">Wikipedia</a>
+						<div class="text">`lambda_max(T)`: Wellenlänge, bei der die Intensität maximal ist (in μm)</div>
+						<div class="text">`T`: absolute Temperatur des Schwarzen Körpers (in K)</div>
+						<br/>
+						<div class="text">Siehe <a href="https://de.wikipedia.org/wiki/Wiensches_Verschiebungsgesetz">Wikipedia</a></div>
 					</div>
 					<div class="separator"></div>
 					<div class="section">
@@ -40,15 +41,38 @@
 						<div class="math">(2) `P = sigma * A * T^4`</div>
 					</div>
 					<div class="section">
-						<div class="text">`sigma`: Stefan-Bolzman-Konstante = `5,78 * 10^-8 W/(m^2K^4)`</a>
-						<div class="text">`P`: abgestrahlte Leistung</a>
-						<div class="text">`A`: Abstrahlungsfläche</a>
-						<div class="text">`T`: absolute Temperatur (in K)</a>
-						<div class="text">Siehe <a href="https://de.wikipedia.org/wiki/Stefan-Boltzmann-Gesetz">Wikipedia</a>
+						<div class="text">`sigma`: Stefan-Bolzman-Konstante = `5,78 * 10^-8 W/(m^2K^4)`</div>
+						<div class="text">`P`: abgestrahlte Leistung</div>
+						<div class="text">`A`: Abstrahlungsfläche</div>
+						<div class="text">`T`: absolute Temperatur (in K)</div>
+						<br/>
+						<div class="text">Siehe <a href="https://de.wikipedia.org/wiki/Stefan-Boltzmann-Gesetz">Wikipedia</a></div>
+					</div>
+					<div class="separator"></div>
+					<div class="section">
+						<div class="text">Plancksches Strahlungsgesetz</div>
+					</div>
+					<div class="section">
+						<div class="math">`U_v^0(v,T) dV dv = (8pihv^3)/c^3 1/(e^((hv)/(kT))-1)`</div>
+					</div>
+					<div class="section">
+						<div class="text">`U_v^0(v,T) dV dv` ist ist die elektromagnetische Energie, die im Volumenelement `dV` des Hohlraums im Frequenzbereich zwischen `v` und `v + dv` vorliegt</div>
+						<div class="text">`h` das Plancksche Wirkungsquantum,</div>
+						<div class="text">`c` die Lichtgeschwindigkeit im Vakuum und </div>
+						<div class="text">`k` die Boltzmann-Konstante</div>
+						<br/>
+						<div class="text">Siehe <a href="https://de.wikipedia.org/wiki/Schwarzer_K%C3%B6rper">Wikipedia</a></div>
+						<div class="text">Siehe <a href="https://en.wikipedia.org/wiki/Black-body_radiation">Wikipedia (en)</a></div>
 					</div>
 					<div class="separator"></div>
 					<!-- TODO: Beugungsunschärfe -->
 					<!--
+					<div class="section">
+						<div class="text"></div>
+					</div>
+					<div class="section">
+						<div class="math"></div>
+					</div>
 					<div class="section">
 						<div class="text"></div>
 					</div>
