neues Thema Rache / vergelten

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -1098,6 +1098,43 @@
 					-->
 				</div>
 			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Rache / Vergelten</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Nimm dir nicht vor, erlittenes Unrecht selber zu vergelten! Vertrau auf den HERRN, er wird dir Recht verschaffen!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Spr%C3%BCche20%2C22" target="_blank">Sprüche 20,22 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Vergeltet anderen Menschen nicht Böses mit Bösem, sondern bemüht euch allen gegenüber um das Gute.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/R%C3%B6mer12%2C17" target="_blank">Römer 12,17 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Nehmt keine Rache, holt euch nicht selbst euer Recht, meine Lieben, sondern überlasst das Gericht Gott. (...)</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/R%C3%B6mer12%2C19" target="_blank">Römer 12,19 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Achtet darauf, dass niemand von euch Böses mit Bösem heimzahlt. Bemüht euch vielmehr stets, das Gute zu tun, im Umgang miteinander und mit allen Menschen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/1.Thessalonicher5%2C15" target="_blank">1.Thessalonicher 5,15 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Vergeltet Böses nicht mit Bösem, und gebt Beleidigungen nicht wieder zurück! Im Gegenteil, segnet eure Beleidiger, denn Gott hat euch dazu berufen, seinen Segen zu empfangen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/1.Petrus3%2C9" target="_blank">1.Petrus 3,9 (GNB)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
+				</div>
+			</div>
 			<!--
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
