weitere Bibelstellöen besonders bei "Rettung"

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -125,7 +125,7 @@
 		<div class="pagecontent">
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
-					<div class="label">Dankbarkeit</div>
+					<div class="label">Dankbarkeit</div> <!-- KW07 2024 -->
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
@@ -170,7 +170,7 @@
 			</div>
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
-					<div class="label">Freude</div>
+					<div class="label">Freude</div> <!-- KW10 2024 -->
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
@@ -300,7 +300,7 @@
 			</div>
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
-					<div class="label">Taten</div>
+					<div class="label">Taten</div> <!-- KW15 2024 -->
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
@@ -357,7 +357,7 @@
 			</div>
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
-					<div class="label">Ehrfurcht/Demut</div>
+					<div class="label">Ehrfurcht/Demut</div> <!-- KW16 2024 -->
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
@@ -505,8 +505,8 @@
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/2.Mose22%2C27" target="_blank">2.Mose 22,27 (GNB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text">Denn Gott allein ist Richter: Den einen lässt er fallen, den anderen bringt er zu Ansehen und Macht.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Psalm75%2C8" target="_blank">Psalm 75,8 (HFA)</a></div>
+						<div class="text">Betet besonders für alle, die in Regierung und Staat Verantwortung tragen, damit wir in Ruhe und Frieden leben können, ehrfürchtig vor Gott und aufrichtig unseren Mitmenschen gegenüber.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Timotheus2%2C2" target="_blank">1.Timotheus 2,2 (HFA)</a></div>
 					</div>
 					<!--
 					<div class="moreinfo">
@@ -532,6 +532,10 @@
 					<div class="moreinfo">
 						<div class="text">Sofort befahl der Hohe Priester Hananias denen, die neben Paulus standen, ihn auf den Mund zu schlagen. Doch Paulus erwiderte: »Gott wird dich schlagen, du getünchte Wand! Was für ein Richter bist du denn, wenn du selbst das Gesetz brichst, indem du mich schlagen lässt?« Die, die neben Paulus standen, sagten zu ihm: »Ist das die Art, wie man mit einem Hohen Priester spricht?« »Es tut mir leid, Brüder. Ich wusste nicht, dass er der Hohe Priester ist«, entgegnete Paulus, »denn in der Schrift heißt es: ›Eine führende Persönlichkeit deines Volkes sollst du nicht beschimpfen.‹«</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Apostelgeschichte23%2C2-5" target="_blank">Apostelgeschichte 23,2-5 (NLB)</a> (siehe auch <a href="https://www.bibleserver.com/NLB/2.Mose22%2C27" target="_blank">2.Mose 22,27</a>)</div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Denn Gott allein ist Richter: Den einen lässt er fallen, den anderen bringt er zu Ansehen und Macht.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Psalm75%2C8" target="_blank">Psalm 75,8 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
 						<div class="text"></div>
@@ -664,7 +668,7 @@
 			</div>
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
-					<div class="label">Verhalten</div>
+					<div class="label">Verhalten</div> <!-- KW08 2024 -->
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
@@ -982,7 +986,7 @@
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Psalm43%2C5" target="_blank">Psalm 43,5 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"> Aber ich weiß, dass mein Erlöser lebt, und als der Letzte wird er über dem Staub sich erheben.</div>
+						<div class="text">Aber ich weiß, dass mein Erlöser lebt, und als der Letzte wird er über dem Staub sich erheben.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/LUT/Hiob19%2C25" target="_blank">Hiob 19:25 (LUT)</a></div>
 					</div>
 					<!--
@@ -999,7 +1003,7 @@
 			</div>
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
-					<div class="label">Rettung</div>
+					<div class="label">Rettung</div> <!-- KW17 2024 -->
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
@@ -1021,6 +1025,14 @@
 					<div class="moreinfo">
 						<div class="text">So spricht der HERR, der heilige Gott Israels: »Kehrt doch um zu mir und werdet ruhig, dann werdet ihr gerettet! Vertraut mir und habt Geduld, dann seid ihr stark! (...)</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja30%2C15" target="_blank">Jesaja 30,15 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">(...) Arbeitet mit Furcht und Zittern an eurer Rettung.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Philipper2%2C12" target="_blank">Philipper 2,12 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Lasst eure Rettung deshalb von niemandem in Frage stellen. Schon gar nicht von solchen Leuten, die sich in falsch verstandener Demut gefallen, Engel zu verehren, und sich dabei stolz auf ihre Visionen berufen! (...)</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser2%2C18" target="_blank">Kolosser 2,18 (HFA)</a></div>
 					</div>
 					<!--
 					<div class="moreinfo">
@@ -1100,7 +1112,7 @@
 			</div>
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
-					<div class="label">Rache / Vergelten</div>
+					<div class="label">Rache / Vergelten</div> <!-- KW09 2024 -->
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
@@ -1155,6 +1167,9 @@
 
 <!--
 
+Weitere themen:
+ - Angst/Furcht (Lukas 10,19; 1.Johannes 4,17-18, Jesaja 8,12, Jesaja 41,10)
+ - Mitgefühl
 
 
 Gebet:
@@ -1167,6 +1182,10 @@ Lukas 22:32
 Lukas 22:40...
 Lukas 23:34
 Lukas 18,1-8
+Kolosser 4,2
+1.Thessalonicher 5,17
+Epheser 6,18
+
 
 
 Philipper3%2C20-21   "Denn unser Bürgerrecht ist in ⟨den⟩ Himmeln,..."
