neues Thema "Schlechtes Reden / Tratsch" bei den Bibelstellen

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -676,10 +676,6 @@
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Lukas6%2C31" target="_blank">Lukas 6:31 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text">Redet nicht schlecht voneinander, sondern habt ein gutes Wort für jeden, der es braucht. Was ihr sagt, soll hilfreich und ermutigend sein, eine Wohltat für alle.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Epheser4%2C29" target="_blank">Epheser 4:29 (HFA)</a></div>
-					</div>
-					<div class="moreinfo">
 						<div class="text">(...) Richtet gerecht und geht liebevoll und barmherzig miteinander um! Unterdrückt die Waisen und Witwen nicht, auch nicht die Ausländer oder die Armen! Und schmiedet keine bösen Pläne gegeneinander!'</div>
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Sacharja7%2C9-10" target="_blank">Sacharja 7,9-10 (NeÜ)</a></div>
 					</div>
@@ -704,14 +700,6 @@
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Spr%C3%BCche26%2C4-5" target="_blank">Sprüche 26,4-5 (GNB)</a></div>
 					</div>
 					<!--
-					<div class="moreinfo">
-						<div class="text">Genauso unpassend für euch ist schmutziges, dummes und anzügliches Gerede; vielmehr sollt ihr Gott danken.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/NLB/Epheser5%2C4-7" target="_blank">Epheser 5:4 (NLB)</a></div>
-					</div>
-					<div class="moreinfo">
-						<div class="text">Kein Christ darf gehässig über andere reden oder gar Streit suchen. Er soll vielmehr jedem freundlich und liebevoll begegnen.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Titus3%2C2" target="_blank">Titus 3:2 (HFA)</a></div>
-					</div>
 					<div class="moreinfo">
 						<div class="text">(..) Wer zwei Hemden hat, soll dem eins geben, der keines hat. Und wer etwas zu essen hat, soll es mit jemand teilen, der hungert.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Lukas3%2C11" target="_blank">Lukas 3:11 (GNB)</a></div>
@@ -739,10 +727,6 @@
 					<div class="moreinfo">
 						<div class="text">Dann werdet ihr mit eurem Leben den Herrn ehren und ihn erfreuen mit allem, was ihr tut. Auf diese Weise werdet ihr Gott immer besser kennenlernen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Kolosser1%2C10" target="_blank">Kolosser 1:10 (NLB)</a></div>
-					</div>
-					<div class="moreinfo">
-						<div class="text">Belügt einander also nicht länger, sondern sagt die Wahrheit. Wir sind doch als Christen die Glieder eines Leibes, der Gemeinde von Jesus.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Epheser4%2C25" target="_blank">Epheser 4:25 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
 						<div class="text">Täuscht nicht nur vor, andere zu lieben, sondern liebt sie wirklich. Hasst alles Böse und stellt euch auf die Seite des Guten. Liebt einander mit aufrichtiger Zuneigung und habt Freude daran, euch gegenseitig Achtung zu erweisen. Werdet nicht nachlässig, sondern lasst euch ganz vom Geist erfüllen und setzt euch für den Herrn ein.</div>
@@ -784,6 +768,47 @@
 						<div class="text">Am Tag des Gerichts werden viele zu mir sagen: ›Herr, Herr! In deinem Namen haben wir prophetische Weisungen verkündet, in deinem Namen haben wir böse Geister ausgetrieben und viele Wunder getan.‹ Und trotzdem werde ich das Urteil sprechen: ›Ich habe euch nie gekannt. Ihr habt versäumt, nach Gottes Willen zu leben; geht mir aus den Augen!‹</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Matth%C3%A4us7%2C22-23" target="_blank">Matthäus 7,22-23 (GNB)</a></div>
 					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
+				</div>
+			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Schlechtes Reden / Tratsch</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Redet nicht schlecht voneinander, sondern habt ein gutes Wort für jeden, der es braucht. Was ihr sagt, soll hilfreich und ermutigend sein, eine Wohltat für alle.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Epheser4%2C29" target="_blank">Epheser 4:29 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Kein Christ darf gehässig über andere reden oder gar Streit suchen. Er soll vielmehr jedem freundlich und liebevoll begegnen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Titus3%2C2" target="_blank">Titus 3:2 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Ich sage euch: Am Tag des Gerichts müsst ihr euch für jedes böse Wort, das ihr sagt, verantworten.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Matth%C3%A4us12%2C36" target="_blank">Matthäus 12,36 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Wer sich für fromm hält, aber seine Zunge nicht zügeln kann, der macht sich selbst etwas vor. Seine Frömmigkeit ist nichts wert.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jakobus1%2C26" target="_blank">Jabobus 1,26 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Genauso unpassend für euch ist schmutziges, dummes und anzügliches Gerede; vielmehr sollt ihr Gott danken.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Epheser5%2C4-7" target="_blank">Epheser 5:4 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Belügt einander also nicht länger, sondern sagt die Wahrheit. Wir sind doch als Christen die Glieder eines Leibes, der Gemeinde von Jesus.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Epheser4%2C25" target="_blank">Epheser 4:25 (HFA)</a></div>
+					</div>
+					<!--
 					<div class="moreinfo">
 						<div class="text"></div>
 						<div class="footer"><a href="" target="_blank"></a></div>
@@ -1189,6 +1214,17 @@ Epheser 6,18
 
 
 Philipper3%2C20-21   "Denn unser Bürgerrecht ist in ⟨den⟩ Himmeln,..."
+
+Ihr habt gelebt, wie es in dieser Welt üblich ist, und wart dem Satan verfallen, der seine Macht ausübt zwischen Himmel und Erde. Sein böser Geist beherrscht auch heute noch das Leben aller Menschen, die Gott nicht gehorchen.
+Zu ihnen haben wir früher auch gehört, damals, als wir eigensüchtig unser Leben selbst bestimmen wollten. Wir haben den Leidenschaften und Verlockungen unserer alten Natur nachgegeben, und wie alle anderen Menschen waren wir dem Zorn Gottes ausgeliefert.
+Epheser 2,2-3 (HFA)
+
+Er hat uns aus der Gewalt der Finsternis befreit, und nun leben wir unter der Herrschaft seines geliebten Sohnes Jesus Christus.
+Kolosser 1,13 (HFA)
+
+Die rettende Botschaft, die wir bekannt machen, bleibt nur für die dunkel und verhüllt, die verloren gehen.
+Sie hat der Satan, der Herrscher dieser Welt, so verblendet, dass sie nicht glauben. Deshalb sehen sie auch das helle Licht dieser Botschaft nicht, die von Christus und seiner Herrlichkeit spricht. Und doch erkennen wir Gott selbst nur durch Christus, weil dieser Gottes Ebenbild ist.
+2.Korinther 4,3-4 (HFA)
 
 
 -->
